fix: url in readme and github icon path

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <a href="https://github.com/ninoDeme/resprite" class="github-button">
-      <img src="images/github.png" alt="Ver no github" />
+      <img src="images/github.png" alt="View source in github" />
     </a>
     <h1>Resprite</h1>
     <form class="flex-col items-start" onsubmit="event.preventDefault()">
@@ -77,8 +77,7 @@
         <input id="checkbox-grid" name="grid" type="checkbox" />
       </div>
       <button id="button-salvar">Save Output</button>
-      <div id="link-container">
-      </div>
+      <div id="link-container"></div>
       <div class="separator" aria-hidden></div>
       <div class="flex-row gap-4 flex-wrap">
         <div class="flex-col items-start">
